# GradSAT

./: .gitignore  README.md  req.txt
backend/: pyproject.toml
backend/grad_sat/cp_sat/time_tables/: main.py  model.py
backend/grad_sat/cp_sat/v1/: solver.py
backend/grad_sat/cp_sat/v2/: dependent_variables.py  feasability_model.py  main.py  model.py  static.py  uoit_courses_copy.pickle
backend/grad_sat/cp_sat/v2/parser/: Makefile  csv_parser.py  dnf_convertor.py
backend/grad_sat/db/: database.py  schema.py
backend/grad_sat/scraper/: info_reducer.py  main.py  uoit_courses.py
backend/grad_sat/server/: main.py
backend/grad_sat/server/routers/: graduation.py  misc.py  time_tables.py
backend/grad_sat/test/: main.py
backend/scout_platform/cp_sat/time_tables/: main.py  model.py
backend/scout_platform/cp_sat/v1/: static.py
backend/scout_platform/cp_sat/v2/: courses.sh  dependent_variables.py  feasability_model.py  main.py  model.py  uoit_courses.csv  uoit_courses.pickle  uoit_courses_copy.pickle
backend/scout_platform/cp_sat/v2/parser/: csv_parser.py  dnf_convertor.py
backend/scout_platform/db/: compose.yaml  database.py
backend/scout_platform/scraper/: info_reducer.py  main.py  models.py  uoit_courses.py
backend/scout_platform/server/: main.py
infra/terraform/: ecr.tf  (+4 more)
scraper/: example.env  first_50.json  info_reducer.py  main.py  models.py  scraper.py
server/: main.py
solver/: readme.md  solver.py  static.py  util.py
ui/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
(+62 files in other folders)
